Fixed the bug that addtocart button does not work on Iphone

--- a/viciousDelicious/src/pages/detail/detail.scss
+++ b/viciousDelicious/src/pages/detail/detail.scss
@@ -51,6 +51,7 @@ page-detail {
       background-size:contain;
       background-position: right;
       background-color: #b1cdfb;
+      cursor: pointer;
     }
 
 
